# modelamiento_simulacion

./: Taller3.txt  cualquiernombre.ipynb  pyproject.toml
01-03-2023/: Main.py
01-03-2023/Register/: person.py
06-03-2023/: main.py
10-05-2023/: datos.ods
13-03-2023/: main.py  main2.py
15-03-2023/: main.ipynb
17-05-2023/: main.ipynb
22-03-2023/: main.ipynb
27-03-2023/: Ejercicio1.ipynb  Ejercicio2.ipynb  main.ipynb
Class1/: clase.py
Parcial1/: Main.py
Parcial1/Alumno/: person.py
Taller2/: 2 copy.ipynb  2.ipynb  main.ipynb
