[tool.poetry]
name = "modelamiento-simulacion-poetry"
version = "0.1.0"
description = "uso numpy"
authors = ["Your Name <you@example.com>"]
license = "MIT"
readme = "README.md"
packages = [{include = "modelamiento_simulacion_poetry"}]

[tool.poetry.dependencies]
python = "^3.11"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
